style: added 100% width to event images to stop overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,30 +230,35 @@ h5, h4, p {
     background-image: url("../images/beer-pour.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 .event-img-2 {
     background-image: url("../images/beer-of-week.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 .event-img-3 {
     background-image: url("../images/comedy-night.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 .event-img-4 {
     background-image: url("../images/rocker.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 .event-img-5 {
     background-image: url("../images/taco-tuesday.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 /* How to find us */
